--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
     "react-icons": "^5.0.1",
+    "react-loader-spinner": "^6.1.6",
     "react-pro-sidebar": "^0.7.1",
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
